load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//helm:defs.bzl", "helm_chart", "helm_lint_test")
load(":with_multiple_templates_utils.bzl", "copy_to_directory")

go_binary(
    name = "copy_to_dir",
    srcs = ["copy_to_dir.go"],
)

copy_to_directory(
    name = "templates",
    srcs = [
        "//tests/with_multiple_templates/extended:templates",
        "//tests/with_multiple_templates/original:templates",
    ],
    root_paths = [
        "tests/with_multiple_templates/extended/templates",
        "tests/with_multiple_templates/original/templates",
    ],
)

helm_chart(
    name = "multiple",
    chart = "Chart.yaml",
    templates = [":templates"],
    values = "values.yaml",
)

helm_lint_test(
    name = "multiple_test",
    chart = ":multiple",
)
